--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Colored Markers</title>
     <link rel="stylesheet" href="styles.css">
   </head>
-  
+
   <body>
-    <h1>CSS Color Markers</h1>
+    <h1>CSS Color Markers.</h1>
     <div class="container">
       <div class="marker red">
         <div class="cap"></div>
